--- a/chu/index.html
+++ b/chu/index.html
@@ -16,7 +16,7 @@
 
   <div id="intro" class="active">
     <button id="startBtn">
-      Tớ có điều muốn nói<br/>Nhấn vào đây đi
+      Bé Đăng có điều muốn nói<br/>Nhấn vào đây đi
     </button>
   </div>
 
